Bug 494815 - Accessible name subtree computation should ignore whitespace when determining whether to strip user-entered value, r=davidb